--- a/tabel.html
+++ b/tabel.html
@@ -78,7 +78,7 @@
                     <td>Informatika</td>
                     <td>mia@example.com</td>
                     <td>********</td>
-                    <td>/td>Perempuan</td>
+                    <td>Perempuan</td>
                     <td>2001-02-06</td>
                     <td>Jl. gwencana</td>
                 </tr>
